# teo-check-collisions

./: CMakeLists.txt  README.md
cmake/: CMakeLists.txt  TEO_CHECK_COLLISIONSDescribe.cmake  TEO_CHECK_COLLISIONSOptions.cmake  TEO_CHECK_COLLISIONSPackage.cmake  TEO_CHECK_COLLISIONSVersion.cmake
libraries/: CMakeLists.txt
libraries/TeoCheckCollisionsLibrary/: CMakeLists.txt  TeoCheckCollisionsLibrary.cpp  TeoCheckCollisionsLibrary.hpp
libraries/TeoCheckSelfCollisionsLibrary/: CMakeLists.txt  TeoCheckSelfCollisionsLibrary.cpp  TeoCheckSelfCollisionsLibrary.hpp
programs/: CMakeLists.txt
programs/collisionsVisualization/: CMakeLists.txt  CollisionsVisualization.cpp  CollisionsVisualization.hpp  main.cpp
scripts/admin/: update-dox.sh
scripts/gnome/: check-teo_collisions.desktop
share/: CMakeLists.txt
share/contexts/teoCheckCollisions/: fixed-table-collision.ini
share/contexts/teoCheckSelfCollisions/: teo-trunk-LeftArm-fetch-collisions.ini  teo-trunk-RightArm-fetch-collisions.ini
